# txn-guard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: seed_synthetic.py
src/fraud_detection/: __init__.py
src/fraud_detection/agents/: __init__.py  base.py  orchestrator.py
src/fraud_detection/api/: dependencies.py  main.py  routes.py
src/fraud_detection/core/: config.py
src/fraud_detection/domain/: __init__.py  models.py
src/fraud_detection/services/: __init__.py  compliance.py  context_signals.py  embeddings.py  narratives.py  profile.py
src/fraud_detection/storage/: __init__.py  vector_store.py
tests/: test_compliance.py  test_context_signals.py  test_orchestrator.py
