[project]
name = "txn-guard"
version = "0.1.0"
description = "Agentic fraud and AML surveillance backend with vector evidence retrieval and auditable transaction triage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.111.0",
    "faker>=25.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.70.0"]
dev = ["httpx>=0.27.0", "pytest>=8.2.0", "ruff>=0.5.0"]

[project.scripts]
txn-guard-api = "fraud_detection.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
